--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
     <!-- [Process] -->
     <section id="process" class="my-5">
 
-        <div class="bg-color-2 row text-center">
-            <h3>Et harum quidem rerum facilis est et expedita distinctio</h3>
-            <p class="col-md-6 text-center mx-auto pt-4">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+        <div class="bg-color-2 w-100 py-5">
+            <div class="text-center p-0">
+                <h3 class="col-md-8 text-center mx-auto">Et harum quidem rerum facilis est et expedita distinctio</h3>
+                <p class="col-md-6 text-center mx-auto pt-4">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+            </div>
         </div>
             
         <!-- steps 1-3 has 2 columns -->
