debug form style

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             
             <div class="px-4">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur
+                    <strong>Lorem ipsum dolor sit amet, consectetur</strong>
                 </p>
                 <ul class="text-start">
-                    <li>Lorem ipsum dolor sit amet, adipiscing eli</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur</li>
-                    <li>Lorem ipsum dolor sit, consectetur adipiscing eli</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing </li>
+                    <li><p>Lorem ipsum dolor sit amet, adipiscing eli</p></li>
+                    <li><p>Lorem ipsum dolor sit amet, consectetur</p></li>
+                    <li><p>Lorem ipsum dolor sit, consectetur adipiscing eli</p></li>
+                    <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing</p></li>
                 </ul>
                 <button type="button" class="btn btn-outline-light border-dark mt-5">Free Consultation</button>
             </div>
@@ -83,14 +83,14 @@
                 <iframe src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" allowfullscreen></iframe>
             </div>
             <div class="px-5 py-3 mb-5">
-                <p><i>"Sed ut perspiciatis unde omnis iste natus error sit"</i></p>
+                <p><strong><i>"Sed ut perspiciatis unde omnis iste natus error sit"</i></strong></p>
                 <p>voluptatem accusantium...</p>
-                <ul>
-                    <li>architecto beatae vitae dicta sunt
+                <ul class="text-start">
+                    <li><p>architecto beatae vitae dicta sunt</p>
                     </li>
-                    <li>architecto beatae vitae dicta 
+                    <li><p>architecto beatae vitae dicta</p>
                     </li>
-                    <li>architecto beatae vitae dicta sunt explicabo
+                    <li><p>architecto beatae vitae dicta sunt explicabo</p>
                     </li>
                 </ul>
             </div>
