--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
         </div>
         
         <div class="" mt-5 py-3">
-            <div class="row px-3 py-3 m-0">
-                <div class="col px-5 py-3 my-2"><i class="fa-brands fa-facebook-f fa-2xl"></i><strong> Facebook Ads</strong></div>
-                <div class="col px-5 py-3 my-2"><i class="fa-brands fa-tiktok fa-2xl"></i><strong> Tiktok Ads
+            <div class="row px-3 py-3 m-0 d-flex justify-content-evenly">
+                <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-facebook-f fa-2xl"></i><strong> Facebook Ads</strong></div>
+                <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-tiktok fa-2xl"></i><strong> Tiktok Ads
                 </strong> </div>
-                <div class="col px-5 py-3 my-2"><i class="fa-brands fa-google fa-2xl"></i> <strong>Google Ads</strong></div>
-                <div class="col px-5 py-3 my-2"><i class="fa-brands fa-snapchat fa-2xl"></i><strong> Snapchat Ads</strong></div>
-                <div class="col px-5 py-3 my-2"><i class="fa-brands fa-youtube fa-2xl"></i><strong> Youtube Ads</strong></div>
-                <div class="col px-5 py-3 my-2"><i class="fa-brands fa-shopify fa-2xl"></i> <strong>Shopify</strong></div>
-                <div class="col px-5 py-3 my-2"><strong class="klav">klaviyo</strong></div>
+                <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-google fa-2xl"></i> <strong>Google Ads</strong></div>
+                <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-snapchat fa-2xl"></i><strong> Snapchat Ads</strong></div>
+                <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-youtube fa-2xl"></i><strong> Youtube Ads</strong></div>
+                <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-shopify fa-2xl"></i> <strong>Shopify</strong></div>
+                <div class="col-md-2 px-5 py-3 my-2"><strong class="klav">klaviyo</strong></div>
             </div>
         </div>
         
