add .container to testimony

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h3>Nemo enim ipsam voluptatem quia voluptas sit </h3>
         </div>
         <!-- two columns -->
-        <div class="d-lg-flex justify-content-evenly my-5">
+        <div class="d-lg-flex justify-content-evenly my-5 container">
             <div class="p-3">
                 <iframe src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" allowfullscreen></iframe>
             </div>
@@ -101,7 +101,7 @@
 
         <!-- three columns -->
         <div class="bg-color-1 pb-5 mb-5">
-            <div class="d-lg-flex justify-content-evenly pt-5">
+            <div class="d-lg-flex justify-content-evenly pt-5 container">
                 
                 <div class="mx-3 px-5 py-3">
                     <p><i class="fa-brands fa-google fa-2xl py-3"></i></p>
