--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- [above the fold - headline complex] -->
     <section id="headline-complex" class="container py-md-5 my-5">
         
-        <div class="d-lg-flex justify-content-evenly align-items-center p-3">
+        <div class="d-md-flex justify-content-evenly align-items-center p-3">
             <div class="profile-pic pb-5">
                 <img class="" src="images/zack.png.png" alt="zack-homestead">
             </div>
@@ -39,7 +39,7 @@
                 <p>
                     <strong>Lorem ipsum dolor sit amet, consectetur</strong>
                 </p>
-                <ul class="text-start">
+                <ul>
                     <li><p>Lorem ipsum dolor sit amet, adipiscing eli</p></li>
                     <li><p>Lorem ipsum dolor sit amet, consectetur</p></li>
                     <li><p>Lorem ipsum dolor sit, consectetur adipiscing eli</p></li>
@@ -62,14 +62,14 @@
             
             <div class="" mt-5 py-3">
                 <div class="row px-3 py-3 m-0 d-flex justify-content-evenly">
-                    <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-facebook-f fa-2xl"></i><strong> Facebook Ads</strong></div>
-                    <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-tiktok fa-2xl"></i><strong> Tiktok Ads
+                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-facebook-f fa-2xl"></i><strong> Facebook Ads</strong></div>
+                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-tiktok fa-2xl"></i><strong> Tiktok Ads
                     </strong> </div>
-                    <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-google fa-2xl"></i> <strong>Google Ads</strong></div>
-                    <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-snapchat fa-2xl"></i><strong> Snapchat Ads</strong></div>
-                    <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-youtube fa-2xl"></i><strong> Youtube Ads</strong></div>
-                    <div class="col-md-2 px-5 py-3 my-2"><i class="fa-brands fa-shopify fa-2xl"></i> <strong>Shopify</strong></div>
-                    <div class="col-md-2 px-5 py-3 my-2"><strong class="klav">klaviyo</strong></div>
+                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-google fa-2xl"></i> <strong>Google Ads</strong></div>
+                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-snapchat fa-2xl"></i><strong> Snapchat Ads</strong></div>
+                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-youtube fa-2xl"></i><strong> Youtube Ads</strong></div>
+                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-shopify fa-2xl"></i> <strong>Shopify</strong></div>
+                    <div class="col-md-5 col-lg-1 p-3"><strong class="klav">klaviyo</strong></div>
                 </div>
             </div>
         </div>
