--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="text-center">
 
     <nav class="navbar bg-light">
-        <div class="">
+        <div>
           <a class="navbar-brand px-3" href="#">
             <img src="images/logo.svg" alt="Bootstrap" width="40" height="50">
           </a>
@@ -60,7 +60,7 @@
                 </h3>
             </div>
             
-            <div class="" mt-5 py-3">
+            <div mt-5 py-3">
                 <div class="row px-3 py-3 m-0 d-flex justify-content-evenly">
                     <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-facebook-f fa-2xl"></i><strong> Facebook Ads</strong></div>
                     <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-tiktok fa-2xl"></i><strong> Tiktok Ads
@@ -366,7 +366,7 @@
 
         <div class="d-flex flex-column">
 
-            <div class="">
+            <div>
                 <strong>Your Information</strong>
             </div>
 
@@ -385,7 +385,7 @@
                 </div>
             </div>
 
-            <div class=""">
+            <div>
                 <strong>Company Information</strong>
             </div>
 
@@ -410,7 +410,7 @@
                 <div class="pb-3">
                     <textarea name="" id="" cols="20" rows="4" class="form-control" placeholder="How did you hear about Homestead?" required></textarea>
                 </div>
-                <div class="">
+                <div>
                     <textarea name="" id="" cols="20" rows="4" class="form-control" placeholder="What are you looking for in a growth marketing partner?" required></textarea>
                 </div>
             </div>
@@ -422,32 +422,32 @@
                 <strong>What services are you interested in?</strong>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" id="paid-social">
+                <label class="form-check-label" for="paid-social">
                 <p>Paid Social </p>
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" id="paid-search">
+                <label class="form-check-label" for="paid-search">
                 <p>Paid Search </p>
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" id="email-sms">
+                <label class="form-check-label" for="email-sms">
                 <p>Email/SMS </p>
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" id="ugc">
+                <label class="form-check-label" for="ugc">
                 <p>UGC </p>
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                <label class="form-check-label" for="defaultCheck1">
+                <input class="form-check-input" type="checkbox" value="" id="landing-pages">
+                <label class="form-check-label" for="landing-pages">
                 <p>Landing Pages </p>
                 </label>
             </div>
