refactor code logo-bar section

--- a/index.html
+++ b/index.html
@@ -62,14 +62,34 @@
             
             <div mt-5 py-3">
                 <div class="row px-3 py-3 m-0 d-flex justify-content-evenly">
-                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-facebook-f fa-2xl"></i><strong> Facebook Ads</strong></div>
-                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-tiktok fa-2xl"></i><strong> Tiktok Ads
-                    </strong> </div>
-                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-google fa-2xl"></i> <strong>Google Ads</strong></div>
-                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-snapchat fa-2xl"></i><strong> Snapchat Ads</strong></div>
-                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-youtube fa-2xl"></i><strong> Youtube Ads</strong></div>
-                    <div class="col-md-5 col-lg-1 p-3"><i class="fa-brands fa-shopify fa-2xl"></i> <strong>Shopify</strong></div>
-                    <div class="col-md-5 col-lg-1 p-3"><strong class="klav">klaviyo</strong></div>
+                    <div class="col-md-5 col-lg-1 py-4">
+                        <div><i class="fa-brands fa-facebook-f fa-2xl"></i></div>
+                        <div><strong> Facebook Ads</strong></div>
+                    </div>
+                    <div class="col-md-5 col-lg-1 py-4">
+                        <div><i class="fa-brands fa-tiktok fa-2xl"></i></div>
+                        <div><strong>Tiktok Ads</div>
+                    </strong> 
+                </div>
+                    <div class="col-md-5 col-lg-1 py-4">
+                        <div><i class="fa-brands fa-google fa-2xl"></i></div>
+                         <div><strong>Google Ads</strong></div>
+                        </div>
+                    <div class="col-md-5 col-lg-1 py-4">
+                        <div><i class="fa-brands fa-snapchat fa-2xl"></i></div>
+                        <div><strong> Snapchat Ads</strong></div>
+                    </div>
+                    <div class="col-md-5 col-lg-1 py-4">
+                        <div><i class="fa-brands fa-youtube fa-2xl"></i></div>
+                        <div><strong> Youtube Ads</strong></div>
+                    </div>
+                    <div class="col-md-5 col-lg-1 py-4">
+                        <div><i class="fa-brands fa-shopify fa-2xl"></i></div>
+                         <div><strong>Shopify</strong></div>
+                        </div>
+                    <div class="col-md-5 col-lg-1 py-4">
+                        <div><strong class="klav">klaviyo</strong></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -151,17 +171,17 @@
                 </div>
                 <div class="col-md-6 p-5">
                     <img src="images/CreativeConsulting_Icon.svg" alt="">
-                    <p><strong>similique sunt in</strong></p>
+                    <p><strong>culpa qui officia</strong></p>
                     <p>Change the content of emails depending on who is reading them.</p>
                 </div>
                 <div class="col-md-6 p-5">
                     <img src="images/SMSAutomation_Icon.svg" alt="">
-                    <p><strong>similique sunt in</strong></p>
+                    <p><strong>deserunt mollitia animi</strong></p>
                     <p>We’ll write email copy that will build relationships and increase sales.</p>
                 </div>
                 <div class="col-md-6 p-5">
                     <img src="images/PaidSocial_Icon.svg" alt="">
-                    <p><strong>similique sunt in</strong></p>
+                    <p><strong>laborum et dolorum</strong></p>
                     <p>All emails will be designed to reflect and represent your brand.</p>
                 </div>
             </div>
