--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
             <div mt-5 py-3">
                 <div class="row px-3 py-3 m-0 d-flex justify-content-evenly">
                     <div class="col-md-5 col-lg-1 py-4">
-                        <div><i class="fa-brands fa-facebook-f fa-2xl"></i></div>
+                        <div class="pb-2"><i class="fa-brands fa-facebook-f fa-2xl"></i></div>
                         <div><strong> Facebook Ads</strong></div>
                     </div>
                     <div class="col-md-5 col-lg-1 py-4">
-                        <div><i class="fa-brands fa-tiktok fa-2xl"></i></div>
+                        <div class="pb-2"><i class="fa-brands fa-tiktok fa-2xl"></i></div>
                         <div><strong>Tiktok Ads</div>
                     </strong> 
                 </div>
                     <div class="col-md-5 col-lg-1 py-4">
-                        <div><i class="fa-brands fa-google fa-2xl"></i></div>
+                        <div class="pb-2"><i class="fa-brands fa-google fa-2xl"></i></div>
                          <div><strong>Google Ads</strong></div>
                         </div>
                     <div class="col-md-5 col-lg-1 py-4">
-                        <div><i class="fa-brands fa-snapchat fa-2xl"></i></div>
+                        <div class="pb-2"><i class="fa-brands fa-snapchat fa-2xl"></i></div>
                         <div><strong> Snapchat Ads</strong></div>
                     </div>
                     <div class="col-md-5 col-lg-1 py-4">
-                        <div><i class="fa-brands fa-youtube fa-2xl"></i></div>
+                        <div class="pb-2"><i class="fa-brands fa-youtube fa-2xl"></i></div>
                         <div><strong> Youtube Ads</strong></div>
                     </div>
                     <div class="col-md-5 col-lg-1 py-4">
-                        <div><i class="fa-brands fa-shopify fa-2xl"></i></div>
+                        <div class="pb-2"><i class="fa-brands fa-shopify fa-2xl"></i></div>
                          <div><strong>Shopify</strong></div>
                         </div>
                     <div class="col-md-5 col-lg-1 py-4">
