--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mariele's code solution to the given skill assessment by Homestead's frontend developer role, built with HTML and CSS, and made responsive to any screen device with Bootstrap 5">
     <title>Homestead</title>
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Inter:wght@600&family=Overpass:wght@400;700&display=swap" rel="stylesheet">
